# boustrategy

./: .gitignore  AGENTS.md  NOTES.md  README.md  boustrategy_spec.md  pyproject.toml
app/labeling/: adjudication.py  experiment.py  server.py
app/orders/: create_order_intent.py
app/policy/: decision_policy.py
app/prices/: cache.py  yfinance_source.py
app/schemas/: decision_record.py  order_intent.py
app/state/: pipeline.py
app/storage/: database.py  records.py
app/x/: accounts.py  client.py  posts.py  run.py  signals.py
docs/: decision_record.md  mandate.md  risk_policy.md  risk_posture.md  source_policy.md  theme_classification.md
docs/proposals/: PROPOSED-mandate-v2.md  PROPOSED-risk_posture.md  PROPOSED-spec-amendments.md
docs/research/: data_provider_research.md  gate_experiment_findings.md
docs/x_manual/: README.md
plans/: 001-tighten-decision-record-schema.md  002-correct-policy-gate-scoping.md  003-portfolio-aware-policy-rules.md  004-dx-baseline-lint-typecheck-agents-md.md  005-order-intent-schema.md  006-record-persistence.md  007-daily-price-cache.md  008-data-provider-research.md  009-backend-state-machine.md  010-x-ingestion-monitored-trial.md  011-labeling-interface.md  012-thread-context.md  013-media-capture.md  014-backfill-rehydration.md  015-gate-agreement-harness.md  016-adjudication-ui.md  HUMAN_GUIDE.md  README.md
tests/fixtures/: __init__.py  decision_records.py
tests/labeling/: test_adjudication.py  test_experiment.py  test_server.py
tests/orders/: test_create_order_intent.py
tests/policy/: test_decision_policy.py
(+8 files in other folders)
