[project]
name = "boustrategy"
version = "0.1.0"
description = "Investment decision harness for BouStrategy."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "yfinance>=0.2",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
